objects/nFORCE__Audit_Event__e.object
<CustomObject>
    <description>Provides data collection for nCino Access Auditing.</description>
    <fields>
        <fullName>nFORCE__Context__c</fullName>
        <description>The system populates this field to store the audit log initiator.</description>
        <label>Context</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>The system populates this field to store additional log details.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nFORCE__IP_Address__c</fullName>
        <description>The system populates this field to store the user&apos;s IP address.</description>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Log_DateTime__c</fullName>
        <description>The system populates this field to store the log creation timestamp.</description>
        <label>Log DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nFORCE__Type__c</fullName>
        <description>The system populates this field to store the audit log type.</description>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__User__c</fullName>
        <description>The system populates this field to map the audit log to the associated user.</description>
        <label>User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Audit Event</label>
    <pluralLabel>Audit Events</pluralLabel>
</CustomObject>